feat: services images

--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -131,11 +131,10 @@
       <!-- Image Section -->
       <div
         class="relative rounded-lg overflow-hidden bg-no-repeat bg-center"
-        style="background-image: url('/images/partners/biggy.png')"
       >
         <div class="aspect-w-16 aspect-h-9">
           <img
-            src="/images/services/beatmaking.png"
+            src="/images/services/distribution.png"
             class="w-full h-full object-cover"
             alt="Music Distribution"
           />
@@ -178,11 +177,10 @@
       <!-- Image Section -->
       <div
         class="relative rounded-lg overflow-hidden bg-no-repeat bg-center"
-        style="background-image: url('/images/services/beatmaking.png')"
       >
         <div class="aspect-w-16 aspect-h-9">
           <img
-            src="/images/services/beatmaking.png"
+            src="/images/services/production.png"
             class="w-full h-full object-cover"
             alt="Beatmaking Services"
           />
@@ -231,11 +229,10 @@
       <!-- Image Section -->
       <div
         class="relative rounded-lg overflow-hidden bg-no-repeat bg-center"
-        style="background-image: url('/images/services/studio.png')"
       >
         <div class="aspect-w-16 aspect-h-9">
           <img
-            src="/images/services/beatmaking.png"
+            src="/images/services/studio.png"
             class="w-full h-full object-cover"
             alt="Studio Services"
           />
