--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -116,7 +116,7 @@
     <div class="sm:flex sm:items-center sm:justify-between">
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-        >VCG Recordz</span
+        >💿 VCG Recordz</span
       >
       <ul
         class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400"
