--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -130,7 +130,7 @@
     <div class="grid gap-8 sm:px-4 md:px-0 lg:grid-cols-2 items-center">
       <!-- Image Section -->
       <div
-        class="relative rounded-lg overflow-hidden bg-no-repeat bg-center"
+        class="service-image relative rounded-lg overflow-hidden bg-no-repeat bg-center"
       >
         <div class="aspect-w-16 aspect-h-9">
           <img
@@ -143,7 +143,7 @@
 
       <!-- Text Section -->
       <div class="max-w-xl px-4 space-y-3 sm:px-0 lg:max-w-2xl">
-        <h3 class="text-blue-600 font-semibold">VCG Distribution</h3>
+        <h3 class="text-blue-600 font-semibold">📤 VCG Distribution</h3>
         <p class="text-white text-3xl font-semibold sm:text-4xl">
           Music Distribution Services
         </p>
@@ -176,7 +176,7 @@
     <div class="grid gap-8 sm:px-4 md:px-0 lg:grid-cols-2 items-center">
       <!-- Image Section -->
       <div
-        class="relative rounded-lg overflow-hidden bg-no-repeat bg-center"
+        class="service-image relative rounded-lg overflow-hidden bg-no-repeat bg-center"
       >
         <div class="aspect-w-16 aspect-h-9">
           <img
@@ -189,7 +189,7 @@
 
       <!-- Text Section -->
       <div class="max-w-xl px-4 space-y-3 sm:px-0 lg:max-w-2xl">
-        <h3 class="text-blue-600 font-semibold">VCG Production</h3>
+        <h3 class="text-blue-600 font-semibold">🎹 VCG Production</h3>
         <div class="flex items-center space-x-2">
           <p class="text-white text-3xl font-semibold sm:text-4xl">
             Beatmaker Team
@@ -228,7 +228,7 @@
     <div class="grid gap-8 sm:px-4 md:px-0 lg:grid-cols-2 items-center">
       <!-- Image Section -->
       <div
-        class="relative rounded-lg overflow-hidden bg-no-repeat bg-center"
+        class="service-image relative rounded-lg overflow-hidden bg-no-repeat bg-center"
       >
         <div class="aspect-w-16 aspect-h-9">
           <img
@@ -241,7 +241,7 @@
 
       <!-- Text Section -->
       <div class="max-w-xl px-4 space-y-3 sm:px-0 lg:max-w-2xl">
-        <h3 class="text-blue-600 font-semibold">VCG Studio</h3>
+        <h3 class="text-blue-600 font-semibold">🎙 VCG Studio</h3>
         <p class="text-white text-3xl font-semibold sm:text-4xl">
           Mixing and Recording Services
         </p>
