feat: services links

--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -154,7 +154,7 @@
           will be showcased on the VCG website.
         </p>
         <a
-          href="javascript:void(0)"
+          routerLink="/getintouch"
           class="inline-flex gap-x-1 items-center text-blue-600 hover:text-indigo-500 duration-150 font-medium"
         >
           Get your music distributed!
@@ -206,7 +206,7 @@
           have your profile showcased on the VCG website.
         </p>
         <a
-          href="javascript:void(0)"
+          routerLink="/getintouch"
           class="inline-flex gap-x-1 items-center text-blue-600 hover:text-indigo-500 duration-150 font-medium"
         >
           Join our beatmakers!
@@ -253,7 +253,7 @@
           for maximum reach.
         </p>
         <a
-          href="javascript:void(0)"
+          routerLink="/getintouch"
           class="inline-flex gap-x-1 items-center text-blue-600 hover:text-indigo-500 duration-150 font-medium"
         >
           Book a studio session!
