--- a/src/app/components/pages/artists/artists.component.html
+++ b/src/app/components/pages/artists/artists.component.html
@@ -10,7 +10,7 @@
       <div>
         <div class="max-w-lg md:max-w-none">
           <h2 class="text-2xl font-semibold text-white sm:text-3xl">
-            Kitsui & Køni
+            🖖 Kitsui & Køni
           </h2>
 
           <p class="mt-4 text-gray-300 font-medium">
@@ -101,7 +101,7 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">MADPOOF</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">‼️ MADPOOF</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
             MADPOOF is a Trap, Drum & Bass and new-age Breakcore producer. He
@@ -167,7 +167,7 @@
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">Cl6ud6</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">☁️ Cl6ud6</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
             Cl6ud6 is a French rapper who has underground and modern vibes. He
@@ -232,7 +232,7 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">Loupa</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">🐺 Loupa</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
             Loupa is a French rapper who has collaborated extensively with Køni
@@ -280,11 +280,11 @@
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">Gaxve</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">✨ Gaxve</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
-            Gaxve, a breakcore producer from Spain, Europe, primarily focused on
-            new-age breakcore, Drum & Bass, and Jungle, collaborated with
+            Gaxve, a producer from Spain, Europe, primarily focused on
+            new-age Breakcore, Drum & Bass, and Jungle, collaborated with
             MADPOOF on the tracks "Refresh Token" and "Internal Conflict
             (Unreleased yet)", released via Breakstation.
           </p>
@@ -363,7 +363,7 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">CXMET</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">💀 CXMET</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
             CXMET is a phonkwave producer who collaborated with MADPOOF on the
