--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -6,7 +6,7 @@
       <h2 class="text-3xl font-bold text-center mb-6">About Us</h2>
       <div class="space-y-16 sm:text-lg text-xs leading-relaxed sm:px-16 px-4">
         <p>
-          Founded in the vibrant currents of music and entrepreneurial spirit,
+          📌 Founded in the vibrant currents of music and entrepreneurial spirit,
           VCG Recordz's journey began in 2013 when a young Kitsui, at the tender
           age of 13, started dabbling in music production. His passion quickly
           escalated as he explored various recording and music composition
@@ -14,7 +14,7 @@
         </p>
 
         <p>
-          The year 2018 marked a significant turning point when Kitsui met Køni
+          📌 The year 2018 marked a significant turning point when Kitsui met Køni
           and shortly thereafter, Biggy. By 2019, Kitsui and Køni were not just
           acquaintances but collaborators, bonding over their shared love for
           music, rapping, and singing together. Kitsui, who had honed his skills
@@ -25,7 +25,7 @@
         </p>
 
         <p>
-          As their skills sharpened, Kitsui passed on his knowledge of mixing to
+          📌 As their skills sharpened, Kitsui passed on his knowledge of mixing to
           Køni, empowering him to record autonomously and master his vocal
           finesse using professional plugins and custom presets. This led to an
           influx of requests from other artists seeking their mixing magic, but
@@ -34,33 +34,33 @@
         </p>
 
         <p>
-          Realizing the potential, and driven by a staunch determination to
+          📌 Realizing the potential, and driven by a staunch determination to
           remain independent, the idea of forming their own label took root. In
           2021, conversations began to shape this vision, culminating in the
           official launch of VCG Recordz on January 16, 2024.
         </p>
 
         <p>
-          At the helm of the company stood Kitsui, Køni, and Biggy, with Biggy
+          📌 At the helm of the company stood Kitsui, Køni, and Biggy, with Biggy
           honored as the president for his unwavering support and solidarity
           from the very start—not just in music but in life and business
-          endeavors. Despite Biggy’s title, Kitsui managed the day-to-day
+          endeavors. Despite Biggy’s title, Kitsui manages the day-to-day
           operations, including finances, accounting, web development, and
-          client management, while Køni and he jointly steered the business
+          client management, while Køni and he jointly steers the business
           decisions.
         </p>
 
         <p>
-          Biggy also ventured into videography, having filmed all their amateur
+          📌 Biggy also ventured into videography, having filmed all their amateur
           music videos since 2019 and starring in their first official music
-          video in 2022. The label grew to include beatmakers like OGS and
-          Shidoz, expanding their reach and influence in the music industry. VCG
+          video in 2022. The label grew to include beatmakers like Oddgyes first, then Shidozz and
+          DMB, expanding their reach and influence in the music industry. VCG
           Recordz also launched VCG Production, a platform on YouTube and
-          Beatstar showcasing and selling beats crafted by their talented team.
+          Beatstars showcasing and selling beats crafted by their talented team.
         </p>
 
         <p>
-          Today, VCG Recordz stands as a hub for artists seeking to collaborate
+          📌 Today, VCG Recordz stands as a hub for artists seeking to collaborate
           and innovate within the music industry. Operating from two home
           studios, the label not only produces and mixes their own material but
           also extends these services to a wide array of local and national
