--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -122,13 +122,10 @@
         class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400"
       >
         <li>
-          <a routerLink="/about" class="hover:underline me-4 md:me-6">About</a>
+          <a routerLink="/request" class="hover:underline me-4 md:me-6">Privacy Policy</a>
         </li>
         <li>
-          <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-        </li>
-        <li>
-          <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+          <a routerLink="/request" class="hover:underline me-4 md:me-6">Licensing</a>
         </li>
         <li>
           <a routerLink="/contact" class="hover:underline">Contact</a>
