--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -56,24 +56,39 @@
     ></div>
   </div>
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-2xl lg:mx-0">
-      <h2 class="text-5xl font-semibold tracking-tight text-white sm:text-7xl">
-        Work with us !
-      </h2>
-      <p
-        class="mt-8 text-pretty text-lg font-medium text-gray-300 sm:text-xl/8"
-      >
-      We distribute beatmakers' beats, release singles and albums, and provide professional recording and voice mixing services. Our team is dedicated to ensuring your music reaches its full potential, offering support every step of the way from creation to distribution.
-      </p>
+    <div class="flex sm:items-center sm:flex-col md:flex-row lg:flex-row">
+      <div class="mx-auto max-w-2xl lg:mx-0">
+        <h2
+          class="text-5xl font-semibold tracking-tight text-white sm:text-7xl"
+        >
+          Work with us !
+        </h2>
+        <p
+          class="mt-8 text-pretty text-lg font-medium text-gray-300 sm:text-xl/8"
+        >
+          We distribute beatmakers' beats, release singles and albums, and
+          provide professional recording and voice mixing services. Our team is
+          dedicated to ensuring your music reaches its full potential, offering
+          support every step of the way from creation to distribution.
+        </p>
+      </div>
+      <img src="/logo.png" alt="VCG Recordz" class="w-48 h-48" />
     </div>
     <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
       <div
         class="grid grid-cols-1 gap-x-8 gap-y-6 text-base/7 font-semibold text-white sm:grid-cols-2 md:flex lg:gap-x-10"
       >
-        <a routerLink="/artists">Discover Artists <span aria-hidden="true">&rarr;</span></a>
-        <a routerLink="/getintouch">Meet our Team <span aria-hidden="true">&rarr;</span></a>
-        <a routerLink="/services">Our services <span aria-hidden="true">&rarr;</span></a>
-        <a routerLink="/team">Discover Beatmakers <span aria-hidden="true">&rarr;</span></a
+        <a routerLink="/artists"
+          >Discover Artists <span aria-hidden="true">&rarr;</span></a
+        >
+        <a routerLink="/getintouch"
+          >Meet our Team <span aria-hidden="true">&rarr;</span></a
+        >
+        <a routerLink="/services"
+          >Our services <span aria-hidden="true">&rarr;</span></a
+        >
+        <a routerLink="/team"
+          >Discover Beatmakers <span aria-hidden="true">&rarr;</span></a
         >
       </div>
       <dl
