--- a/src/app/components/pages/home/home.component copy.html
+++ b/src/app/components/pages/home/home.component copy.html
@@ -60,13 +60,11 @@
       <div class="mx-auto max-w-2xl lg:mx-0">
         <h2
           class="text-5xl font-semibold tracking-tight text-white sm:text-7xl"
-          i18n="@@work_with_us"
         >
-          Work with us!
+          Work with us !
         </h2>
         <p
           class="mt-8 text-pretty text-lg font-medium text-gray-300 sm:text-xl/8"
-          i18n="@@description"
         >
           We distribute beatmakers' beats, release singles and albums, and
           provide professional recording and voice mixing services. Our team is
@@ -80,44 +78,36 @@
       <div
         class="grid grid-cols-1 gap-x-8 gap-y-6 text-base/7 font-semibold text-white sm:grid-cols-2 md:flex lg:gap-x-10"
       >
-        <a routerLink="/artists" i18n="@@discover_artists">
-          Discover Artists <span aria-hidden="true">&rarr;</span>
-        </a>
-        <a routerLink="/getintouch" i18n="@@meet_our_team">
-          Meet our Team <span aria-hidden="true">&rarr;</span>
-        </a>
-        <a routerLink="/services" i18n="@@our_services">
-          Our services <span aria-hidden="true">&rarr;</span>
-        </a>
-        <a routerLink="/team" i18n="@@discover_beatmakers">
-          Discover Beatmakers <span aria-hidden="true">&rarr;</span>
-        </a>
+        <a routerLink="/artists"
+          >Discover Artists <span aria-hidden="true">&rarr;</span></a
+        >
+        <a routerLink="/getintouch"
+          >Meet our Team <span aria-hidden="true">&rarr;</span></a
+        >
+        <a routerLink="/services"
+          >Our services <span aria-hidden="true">&rarr;</span></a
+        >
+        <a routerLink="/team"
+          >Discover Beatmakers <span aria-hidden="true">&rarr;</span></a
+        >
       </div>
       <dl
         class="mt-16 grid grid-cols-1 gap-8 sm:mt-20 sm:grid-cols-2 lg:grid-cols-4"
       >
         <div class="flex flex-col-reverse gap-1">
-          <dt class="text-base/7 text-gray-300" i18n="@@songs_recorded">
-            Songs recorded
-          </dt>
+          <dt class="text-base/7 text-gray-300">Songs recorded</dt>
           <dd class="text-4xl font-semibold tracking-tight text-white">160+</dd>
         </div>
         <div class="flex flex-col-reverse gap-1">
-          <dt class="text-base/7 text-gray-300" i18n="@@projects_distributed">
-            Projects Distributed
-          </dt>
+          <dt class="text-base/7 text-gray-300">Projects Distributed</dt>
           <dd class="text-4xl font-semibold tracking-tight text-white">35</dd>
         </div>
         <div class="flex flex-col-reverse gap-1">
-          <dt class="text-base/7 text-gray-300" i18n="@@collaborations">
-            Collaborations
-          </dt>
+          <dt class="text-base/7 text-gray-300">Collaborations</dt>
           <dd class="text-4xl font-semibold tracking-tight text-white">12</dd>
         </div>
         <div class="flex flex-col-reverse gap-1">
-          <dt class="text-base/7 text-gray-300" i18n="@@seniority">
-            Seniority
-          </dt>
+          <dt class="text-base/7 text-gray-300">Seniority</dt>
           <dd class="text-4xl font-semibold tracking-tight text-white">
             1 year
           </dd>
