feat: services description

--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -148,10 +148,12 @@
           Music Distribution Services
         </p>
         <p class="mt-3 text-gray-300">
-          We distribute music for emerging artists on all major streaming and
-          download platforms. Choose between our per-project service or an
-          unlimited monthly subscription. Artists opting for the subscription
-          will be showcased on the VCG website.
+          We help emerging artists distribute their music on all major streaming
+          and download platforms. We offer two flexible options: a pay-as-you-go
+          plan, where artists pay a flat fee per single or project (up to 12
+          releases per year), or an unlimited monthly subscription allowing
+          unlimited releases. Subscription artists become part of the VCG family
+          and are showcased on our website.
         </p>
         <a
           routerLink="/getintouch"
@@ -201,9 +203,11 @@
           </span>
         </div>
         <p class="mt-3 text-gray-300">
-          Beatmakers can distribute their work on YouTube and platforms like
-          BeatStars through our network for free. Join our growing community and
-          have your profile showcased on the VCG website.
+          Beatmakers can distribute their work through our network, on platforms
+          like BeatStars, and also on our YouTube channel, at no cost. Join our
+          growing community and have your profile showcased on the VCG website.
+          It is also an opportunity to connect to our artists and producers
+          network. Our goal is to federate a strong community of beatmakers.
         </p>
         <a
           routerLink="/getintouch"
@@ -246,11 +250,12 @@
           Mixing and Recording Services
         </p>
         <p class="mt-3 text-gray-300">
-          We offer high-quality recording and mixing services specializing in
+          We offer quality recording and mixing services specializing in
           hip-hop/rap music, with plans to expand to other genres. Based in
-          Haute-Savoie, France, we operate two amateur studios. Artists can
-          utilize our services independently or combine them with distribution
-          for maximum reach.
+          Haute-Savoie, France, we operate amateur studios. Artists can utilize
+          our services independently or combine them with distribution for
+          maximum reach. We plan to invest in a professional studio in the
+          future.
         </p>
         <a
           routerLink="/getintouch"
