--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -3,9 +3,9 @@
   href="https://cdn.materialdesignicons.com/6.5.95/css/materialdesignicons.min.css"
 />
 
-<div class="mb-16">
+<div class="-mb-16">
   <!-- Code block starts -->
-  <div class="container flex justify-center mx-auto pt-16">
+  <div class="container flex justify-center mx-auto pt-4">
     <div class="flex justify-center items-center flex-col w-full">
       <h1 class="text-white text-4xl font-bold mb-2">VCG Team</h1>
       <h2
@@ -24,7 +24,7 @@
       >
         <div
           role="listitem"
-          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5"
+          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-16 sm:mb-24 xl:max-w-sm lg:w-2/5"
         >
           <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300">
             <div class="absolute -mt-20 w-full flex justify-center">
@@ -90,7 +90,7 @@
         </div>
         <div
           role="listitem"
-          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5"
+          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-16 sm:mb-24 xl:max-w-sm lg:w-2/5"
         >
           <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300">
             <div class="absolute -mt-20 w-full flex justify-center">
@@ -148,6 +148,7 @@
 
         <!-- Team Members -->
         <div class="flex flex-wrap justify-center">
+          <!-- Oddgyes -->
           <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
             <div class="flex flex-col">
               <!-- Avatar -->
@@ -182,6 +183,7 @@
             </div>
           </div>
 
+          <!-- Shidozz -->
           <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
             <div class="flex flex-col">
               <!-- Avatar -->
@@ -215,6 +217,7 @@
             </div>
           </div>
 
+          <!-- DarkMusicBeat -->
           <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
             <div class="flex flex-col">
               <!-- Avatar -->
@@ -247,6 +250,30 @@
               </div>
             </div>
           </div>
+
+          <!-- NVSDV -->
+          <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
+            <div class="flex flex-col">
+              <!-- Avatar -->
+              <img
+                class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                src="/images/beatmakers/nvsdv.png"
+              />
+
+              <!-- Details -->
+              <div class="text-center mt-6">
+                <!-- Name -->
+                <h1 class="text-white text-xl font-bold mb-1">NVSDV</h1>
+
+                <!-- Social Icons -->
+                <div
+                  class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
+                >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--end -->
         </div>
 
         <button
