--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -56,7 +56,8 @@
     ></div>
   </div>
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="flex sm:items-center sm:flex-col md:flex-row lg:flex-row">
+    <div class="flex flex-col sm:flex-col sm:items-center md:flex-row lg:flex-row xl:flex-row">
+
       <div class="mx-auto max-w-2xl lg:mx-0">
         <h2
           class="text-5xl font-semibold tracking-tight text-white sm:text-7xl"
@@ -78,7 +79,7 @@
     </div>
     <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
       <div
-        class="grid grid-cols-1 gap-x-8 gap-y-6 text-base/7 font-semibold text-white sm:grid-cols-2 md:flex lg:gap-x-10"
+        class="grid grid-cols-2 gap-x-8 gap-y-6 text-base/7 font-semibold text-white sm:grid-cols-2 md:flex lg:gap-x-10"
       >
         <a routerLink="/artists" i18n="@@discover_artists">
           Discover Artists <span aria-hidden="true">&rarr;</span>
