feat: i18n in tags

--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -3,9 +3,9 @@
 >
   <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">
     <div class="mx-auto max-w-5xl">
-      <h2 class="text-3xl font-bold text-center mb-6">About Us</h2>
+      <h2 class="text-3xl font-bold text-center mb-6" i18n>About Us</h2>
       <div class="space-y-16 sm:text-lg text-xs leading-relaxed sm:px-16 px-4">
-        <p>
+        <p i18n>
           📌 Founded in the vibrant currents of music and entrepreneurial spirit,
           VCG Recordz's journey began in 2013 when a young Kitsui, at the tender
           age of 13, started dabbling in music production. His passion quickly
@@ -13,7 +13,7 @@
           software, including Cubase, Logic Pro X, FL Studio, and Reaper.
         </p>
 
-        <p>
+        <p i18n>
           📌 The year 2018 marked a significant turning point when Kitsui met Køni
           and shortly thereafter, Biggy. By 2019, Kitsui and Køni were not just
           acquaintances but collaborators, bonding over their shared love for
@@ -24,7 +24,7 @@
           always with Biggy by their side.
         </p>
 
-        <p>
+        <p i18n>
           📌 As their skills sharpened, Kitsui passed on his knowledge of mixing to
           Køni, empowering him to record autonomously and master his vocal
           finesse using professional plugins and custom presets. This led to an
@@ -33,14 +33,14 @@
           external projects.
         </p>
 
-        <p>
+        <p i18n>
           📌 Realizing the potential, and driven by a staunch determination to
           remain independent, the idea of forming their own label took root. In
           2021, conversations began to shape this vision, culminating in the
           official launch of VCG Recordz on January 16, 2024.
         </p>
 
-        <p>
+        <p i18n>
           📌 At the helm of the company stood Kitsui, Køni, and Biggy, with Biggy
           honored as the president for his unwavering support and solidarity
           from the very start—not just in music but in life and business
@@ -50,7 +50,7 @@
           decisions.
         </p>
 
-        <p>
+        <p i18n>
           📌 Biggy also ventured into videography, having filmed all their amateur
           music videos since 2019 and starring in their first official music
           video in 2022. The label grew to include beatmakers like Oddgyes first, then Shidozz and
@@ -59,7 +59,7 @@
           Beatstars showcasing and selling beats crafted by their talented team.
         </p>
 
-        <p>
+        <p i18n>
           📌 Today, VCG Recordz stands as a hub for artists seeking to collaborate
           and innovate within the music industry. Operating from two home
           studios, the label not only produces and mixes their own material but
