--- a/src/app/components/pages/artists/artists.component.html
+++ b/src/app/components/pages/artists/artists.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-2xl font-semibold text-white sm:text-3xl text-center">
+<h2 class="text-2xl font-semibold text-white sm:text-3xl text-center" i18n>
   We distribute these artists' music
 </h2>
 
@@ -9,11 +9,11 @@
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl" i18n>
             🖖 Kitsui & Køni
           </h2>
 
-          <p class="mt-4 text-gray-300 font-medium">
+          <p class="mt-4 text-gray-300 font-medium" i18n>
             Kitsui & Køni are a duo of French rappers. Together, they have
             released over 30 songs, including 4 EPs, and have recorded more than
             150 tracks along 8 years of activity.
@@ -25,6 +25,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-yellow-600 hover:text-white font-medium"
+              i18n
             >
               YouTube
             </a>
@@ -33,6 +34,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-yellow-600 hover:text-white font-medium"
+              i18n
             >
               Spotify (Kitsui)
             </a>
@@ -41,6 +43,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-yellow-600 hover:text-white font-medium"
+              i18n
             >
               Spotify (Køni)
             </a>
@@ -49,6 +52,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-yellow-600 hover:text-white font-medium"
+              i18n
             >
               SoundCloud
             </a>
@@ -57,6 +61,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-yellow-600 hover:text-white font-medium"
+              i18n
             >
               Instagram (Kitsui)
             </a>
@@ -65,6 +70,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-yellow-600 hover:text-white font-medium"
+              i18n
             >
               Instagram (Køni)
             </a>
@@ -101,9 +107,11 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">‼️ MADPOOF</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl" i18n>
+            ‼️ MADPOOF
+          </h2>
 
-          <p class="mt-4 text-gray-300 font-medium">
+          <p class="mt-4 text-gray-300 font-medium" i18n>
             MADPOOF is a Trap, Drum & Bass and new-age Breakcore producer. He
             has released more than 10 singles already.
           </p>
@@ -114,6 +122,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-red-600 hover:text-white font-medium"
+              i18n
             >
               YouTube
             </a>
@@ -122,6 +131,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-red-600 hover:text-white font-medium"
+              i18n
             >
               Spotify
             </a>
@@ -130,6 +140,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-red-600 hover:text-white font-medium"
+              i18n
             >
               SoundCloud
             </a>
@@ -138,6 +149,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-red-600 hover:text-white font-medium"
+              i18n
             >
               Instagram
             </a>
@@ -146,6 +158,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-red-600 hover:text-white font-medium"
+              i18n
             >
               Madpoof.com (more links)
             </a>
@@ -156,7 +169,7 @@
   </div>
 </section>
 
-<h2 class="text-2xl font-semibold text-white sm:text-3xl text-center">
+<h2 class="text-2xl font-semibold text-white sm:text-3xl text-center" i18n>
   We collaborated with these artists
 </h2>
 
@@ -167,9 +180,11 @@
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">☁️ Cl6ud6</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl" i18n>
+            ☁️ Cl6ud6
+          </h2>
 
-          <p class="mt-4 text-gray-300 font-medium">
+          <p class="mt-4 text-gray-300 font-medium" i18n>
             Cl6ud6 is a French rapper who has underground and modern vibes. He
             has collaborated with Køni numerous times.
           </p>
@@ -180,6 +195,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-green-600 hover:text-white font-medium"
+              i18n
             >
               Spotify
             </a>
@@ -188,6 +204,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-green-600 hover:text-white font-medium"
+              i18n
             >
               Instagram
             </a>
@@ -196,6 +213,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-green-600 hover:text-white font-medium"
+              i18n
             >
               YouTube
             </a>
@@ -232,9 +250,11 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">🐺 Loupa</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl" i18n>
+            🐺 Loupa
+          </h2>
 
-          <p class="mt-4 text-gray-300 font-medium">
+          <p class="mt-4 text-gray-300 font-medium" i18n>
             Loupa is a French rapper who has collaborated extensively with Køni
             and the Parisian artist Cinco. Known for his global perspective,
             Loupa travels around the world to work with artists from abroad,
@@ -247,6 +267,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-gray-500 hover:text-white font-medium"
+              i18n
             >
               Spotify
             </a>
@@ -255,6 +276,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-gray-500 hover:text-white font-medium"
+              i18n
             >
               Instagram
             </a>
@@ -263,6 +285,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-gray-500 hover:text-white font-medium"
+              i18n
             >
               YouTube
             </a>
@@ -280,13 +303,15 @@
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">✨ Gaxve</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl" i18n>
+            ✨ Gaxve
+          </h2>
 
-          <p class="mt-4 text-gray-300 font-medium">
-            Gaxve, a producer from Spain, Europe, primarily focused on
-            new-age Breakcore, Drum & Bass, and Jungle, collaborated with
-            MADPOOF on the tracks "Refresh Token" and "Internal Conflict
-            (Unreleased yet)", released via Breakstation.
+          <p class="mt-4 text-gray-300 font-medium" i18n>
+            Gaxve, a producer from Spain, Europe, primarily focused on new-age
+            Breakcore, Drum & Bass, and Jungle, collaborated with MADPOOF on the
+            tracks "Refresh Token" and "Internal Conflict (Unreleased yet)",
+            released via Breakstation.
           </p>
 
           <div class="mt-6 flex flex-wrap gap-4">
@@ -295,6 +320,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-indigo-600 hover:text-white font-medium"
+              i18n
             >
               Spotify
             </a>
@@ -303,6 +329,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-indigo-600 hover:text-white font-medium"
+              i18n
             >
               YouTube
             </a>
@@ -311,6 +338,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-indigo-600 hover:text-white font-medium"
+              i18n
             >
               Twitter
             </a>
@@ -319,6 +347,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-indigo-600 hover:text-white font-medium"
+              i18n
             >
               Instagram
             </a>
@@ -327,6 +356,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-indigo-600 hover:text-white font-medium"
+              i18n
             >
               SoundCloud
             </a>
@@ -363,9 +393,11 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">💀 CXMET</h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl" i18n>
+            💀 CXMET
+          </h2>
 
-          <p class="mt-4 text-gray-300 font-medium">
+          <p class="mt-4 text-gray-300 font-medium" i18n>
             CXMET is a phonkwave producer who collaborated with MADPOOF on the
             track "EYES OF HEAVEN (Unreleased yet)", released via Breakstation.
           </p>
@@ -376,6 +408,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-gray-500 hover:text-white font-medium"
+              i18n
             >
               Spotify
             </a>
@@ -384,6 +417,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-gray-500 hover:text-white font-medium"
+              i18n
             >
               Soundcloud
             </a>
@@ -392,6 +426,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="text-gray-500 hover:text-white font-medium"
+              i18n
             >
               YouTube
             </a>
