--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -3,24 +3,24 @@
     class="w-full divide-y divide-gray-200 dark:text-white dark:divide-gray-700"
   >
     <div class="flex flex-col pb-3">
-      <dt class="mb-1 text-gray-500 md:text-lg dark:text-gray-400">
+      <dt class="mb-1 text-gray-500 md:text-lg dark:text-gray-400" i18n>
         Email address
       </dt>
-      <dd class="text-lg font-semibold">business&#64;vcgrecordz.eu</dd>
+      <dd class="text-lg font-semibold" i18n>business&#64;vcgrecordz.eu</dd>
     </div>
     <div class="flex flex-col py-3">
-      <dt class="mb-1 text-gray-500 md:text-lg dark:text-gray-400">
+      <dt class="mb-1 text-gray-500 md:text-lg dark:text-gray-400" i18n>
         Headquarters
       </dt>
-      <dd class="text-lg font-semibold">
+      <dd class="text-lg font-semibold" i18n>
         107 Route du Carroz, 74520 Vulbens, FRANCE
       </dd>
     </div>
     <div class="flex flex-col pt-3">
-      <dt class="mb-1 text-gray-500 md:text-lg dark:text-gray-400">
+      <dt class="mb-1 text-gray-500 md:text-lg dark:text-gray-400" i18n>
         Phone number
       </dt>
-      <dd class="text-lg font-semibold">+33 6 52 63 90 88</dd>
+      <dd class="text-lg font-semibold" i18n>+33 6 52 63 90 88</dd>
     </div>
   </dl>
 
@@ -47,12 +47,14 @@
           </svg>
           <h5
             class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white my-2"
+            i18n
           >
             Follow us on Instagram
           </h5>
         </div>
-        <p class="font-normal text-gray-700 dark:text-gray-400">
-          We share the progress of the Team and the latest news on our Instagram &#64;vcg.recordz
+        <p class="font-normal text-gray-700 dark:text-gray-400" i18n>
+          We share the progress of the Team and the latest news on our Instagram
+          &#64;vcg.recordz
         </p>
       </a>
     </div>
@@ -83,11 +85,12 @@
           </svg>
           <h5
             class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white my-2"
+            i18n
           >
             Purchase beats on Beatstars
           </h5>
         </div>
-        <p class="font-normal text-gray-700 dark:text-gray-400">
+        <p class="font-normal text-gray-700 dark:text-gray-400" i18n>
           Find the best beats by our beatmakers for your next project.
         </p>
       </a>
@@ -114,12 +117,14 @@
           </svg>
           <h5
             class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white my-2"
+            i18n
           >
             Discover beats on YouTube
           </h5>
         </div>
-        <p class="font-normal text-gray-700 dark:text-gray-400">
-          Listen to the latest beats from our beatmakers on our YouTube channel "VCG Production".
+        <p class="font-normal text-gray-700 dark:text-gray-400" i18n>
+          Listen to the latest beats from our beatmakers on our YouTube channel
+          "VCG Production".
         </p>
       </a>
     </div>
