--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -5,6 +5,7 @@
     <a
       routerLink="/"
       class="text-2xl font-semibold whitespace-nowrap dark:text-white"
+      i18n
       >💿 VCG Recordz</a
     >
     <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -12,6 +13,7 @@
         type="button"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         routerLink="/getintouch"
+        i18n
       >
         Get in touch
       </button>
@@ -20,7 +22,7 @@
         (click)="toggleMenu()"
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
       >
-        <span class="sr-only">Open main menu</span>
+        <span class="sr-only" i18n>Open main menu</span>
         <svg
           class="w-5 h-5"
           aria-hidden="true"
@@ -52,6 +54,7 @@
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            i18n
             >Home</a
           >
         </li>
@@ -61,6 +64,7 @@
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            i18n
             >About</a
           >
         </li>
@@ -70,6 +74,7 @@
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            i18n
             >Team</a
           >
         </li>
@@ -79,6 +84,7 @@
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            i18n
             >Artists</a
           >
         </li>
@@ -88,6 +94,7 @@
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            i18n
             >Services</a
           >
         </li>
@@ -97,6 +104,7 @@
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            i18n
             >Contact</a
           >
         </li>
@@ -116,24 +124,31 @@
     <div class="sm:flex sm:items-center sm:justify-between">
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+        i18n
         >💿 VCG Recordz</span
       >
       <ul
         class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400"
       >
         <li>
-          <a routerLink="/request" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+          <a routerLink="/request" class="hover:underline me-4 md:me-6" i18n
+            >Privacy Policy</a
+          >
         </li>
         <li>
-          <a routerLink="/request" class="hover:underline me-4 md:me-6">Licensing</a>
+          <a routerLink="/request" class="hover:underline me-4 md:me-6" i18n
+            >Licensing</a
+          >
         </li>
         <li>
-          <a routerLink="/contact" class="hover:underline">Contact</a>
+          <a routerLink="/contact" class="hover:underline" i18n>Contact</a>
         </li>
       </ul>
     </div>
     <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-    <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400"
+    <span
+      class="block text-sm text-gray-500 sm:text-center dark:text-gray-400"
+      i18n
       >© 2024 VCG Recordz. All Rights Reserved.</span
     >
   </div>
