--- a/src/app/components/pages/not-found/not-found.component.html
+++ b/src/app/components/pages/not-found/not-found.component.html
@@ -2,19 +2,21 @@
   class="grid min-h-full dark:bg-gray-900 place-items-center bg-white px-6 py-24 sm:py-32 lg:px-8"
 >
   <div class="text-center">
-    <p class="text-3xl font-bold text-blue-600">404</p>
+    <p class="text-3xl font-bold text-blue-600" i18n>404</p>
     <h1
       class="mt-4 text-3xl font-bold tracking-tight text-white sm:text-5xl"
+      i18n
     >
       Page not found
     </h1>
-    <p class="mt-6 text-base leading-7 text-gray-200">
+    <p class="mt-6 text-base leading-7 text-gray-200" i18n>
       Sorry, we couldn’t find the page you’re looking for.
     </p>
     <div class="mt-10 flex items-center justify-center gap-x-6">
       <a
         routerLink="/"
         class="cursor-pointer rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
+        i18n
         >Go back home</a
       >
     </div>
