--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -7,9 +7,10 @@
   <!-- Code block starts -->
   <div class="container flex justify-center mx-auto pt-4">
     <div class="flex justify-center items-center flex-col w-full">
-      <h1 class="text-white text-4xl font-bold mb-2">VCG Team</h1>
+      <h1 class="text-white text-4xl font-bold mb-2" i18n>VCG Team</h1>
       <h2
         class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
+        i18n
       >
         Three friends became brothers, then partners.
       </h2>
@@ -19,9 +20,10 @@
     <div class="container mx-auto">
       <div
         role="list"
-        aria-label="Behind the scenes People "
+        aria-label="Behind the scenes People"
         class="lg:flex md:flex sm:flex items-center xl:justify-between flex-wrap md:justify-around sm:justify-around lg:justify-around"
       >
+        <!-- Kitsui -->
         <div
           role="listitem"
           class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-16 sm:mb-24 xl:max-w-sm lg:w-2/5"
@@ -34,25 +36,31 @@
                   alt="Display Picture of Kitsui"
                   role="img"
                   class="rounded-full object-cover h-full w-full shadow-md"
+                  i18n-alt="Display Picture of Kitsui"
                 />
               </div>
             </div>
             <div class="px-6 mt-16">
               <h1
                 class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900"
+                i18n
               >
                 Kitsui
               </h1>
-              <p class="text-gray-900text-sm text-center">VCG Partner</p>
-              <p class="text-center text-gray-900 text-base pt-3 font-normal">
+              <p class="text-gray-900text-sm text-center" i18n>VCG Partner</p>
+              <p
+                class="text-center text-gray-900 text-base pt-3 font-normal"
+                i18n
+              >
                 Ownership, Business Management, Accounting, Treasury Management,
                 Music production, Mixing, Writing, Singing/Rapping, Client
                 Relationship Management, Marketing and Web Development.
               </p>
-              <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
           </div>
         </div>
+
+        <!-- Biggy -->
         <div
           role="listitem"
           class="xl:w-1/3 lg:mx-3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5"
@@ -65,29 +73,35 @@
                   alt="Display Picture of Biggy"
                   role="img"
                   class="rounded-full object-cover h-full w-full shadow-md"
+                  i18n-alt="Display Picture of Biggy"
                 />
               </div>
             </div>
             <div class="px-6 mt-16">
               <h1
                 class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900"
+                i18n
               >
                 Biggy
               </h1>
-              <p class="text-gray-900text-sm text-center">VCG Partner</p>
-              <p class="text-center text-gray-900 text-base pt-3 font-normal">
+              <p class="text-gray-900text-sm text-center" i18n>VCG Partner</p>
+              <p
+                class="text-center text-gray-900 text-base pt-3 font-normal"
+                i18n
+              >
                 Ownership, Filming and Acting.<br /><span
                   class="italic text-gray-300 text-sm"
                   >Biggy is the president but that's a secret, also he imitates
-                  crows during every night. If you're reading this it's either
+                  crows during every night. If you're reading this, it's either
                   you're selecting it or you've got dark reader installed in
                   your browser.</span
                 >
               </p>
-              <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
           </div>
         </div>
+
+        <!-- Køni -->
         <div
           role="listitem"
           class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-16 sm:mb-24 xl:max-w-sm lg:w-2/5"
@@ -100,25 +114,29 @@
                   alt="Display Picture of Køni"
                   role="img"
                   class="rounded-full object-cover h-full w-full shadow-md"
+                  i18n-alt="Display Picture of Køni"
                 />
               </div>
             </div>
             <div class="px-6 mt-16">
               <h1
                 class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900"
+                i18n
               >
                 Køni
               </h1>
-              <p class="text-gray-900text-sm text-center">VCG Partner</p>
-              <p class="text-center text-gray-900 text-base pt-3 font-normal">
+              <p class="text-gray-900text-sm text-center" i18n>VCG Partner</p>
+              <p
+                class="text-center text-gray-900 text-base pt-3 font-normal"
+                i18n
+              >
                 Ownership, Business Management, Mixing, Writing, Rapping, Client
                 Relationship Management and Marketing.<br /><span
                   class="italic text-gray-300 text-base"
-                  >Koni is the best rapper ever! And if you've read well you
+                  >Koni is the best rapper ever! And if you've read well, you
                   know who's writing these secret texts.</span
                 >
               </p>
-              <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
           </div>
         </div>
@@ -137,9 +155,10 @@
         <div class="flex flex-wrap justify-center text-center">
           <div class="flex justify-center items-center flex-col w-full">
             <!-- Header -->
-            <h1 class="text-white text-4xl font-bold mb-2">VCG Production</h1>
+            <h1 class="text-white text-4xl font-bold mb-2" i18n>VCG Production</h1>
             <h2
               class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
+              i18n
             >
               Our beatmakers
             </h2>
@@ -152,17 +171,16 @@
           <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
             <div class="flex flex-col">
               <!-- Avatar -->
-
               <img
                 class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
                 src="/images/beatmakers/oddgyes.png"
+                alt="Oddgyes"
+                i18n-alt="Oddgyes"
               />
-
               <!-- Details -->
               <div class="text-center mt-6">
                 <!-- Name -->
-                <h1 class="text-white text-xl font-bold mb-1">Oddgyes</h1>
-
+                <h1 class="text-white text-xl font-bold mb-1" i18n>Oddgyes</h1>
                 <!-- Social Icons -->
                 <div
                   class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
@@ -173,6 +191,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
+                    i18n-title="Instagram profile"
                   >
                     <i
                       class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
@@ -190,13 +209,13 @@
               <img
                 class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
                 src="/images/beatmakers/shidozz.png"
+                alt="Shidozz"
+                i18n-alt="Shidozz"
               />
-
               <!-- Details -->
               <div class="text-center mt-6">
                 <!-- Name -->
-                <h1 class="text-white text-xl font-bold mb-1">Shidozz</h1>
-
+                <h1 class="text-white text-xl font-bold mb-1" i18n>Shidozz</h1>
                 <!-- Social Icons -->
                 <div
                   class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
@@ -207,6 +226,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
+                    i18n-title="Instagram profile"
                   >
                     <i
                       class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
@@ -224,29 +244,13 @@
               <img
                 class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
                 src="/images/beatmakers/dmb.png"
+                alt="DarkMusicBeat"
+                i18n-alt="DarkMusicBeat"
               />
-
               <!-- Details -->
               <div class="text-center mt-6">
                 <!-- Name -->
-                <h1 class="text-white text-xl font-bold mb-1">DarkMusicBeat</h1>
-
-                <!-- Social Icons -->
-                <div
-                  class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
-                >
-                  <!-- Instagram -->
-                  <a
-                    href="https://www.instagram.com/d.m.b_officiel/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
-                  >
-                    <i
-                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
-                    ></i>
-                  </a>
-                </div>
+                <h1 class="text-white text-xl font-bold mb-1" i18n>DarkMusicBeat</h1>
               </div>
             </div>
           </div>
@@ -258,28 +262,23 @@
               <img
                 class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
                 src="/images/beatmakers/nvsdv.png"
+                alt="NVSDV"
+                i18n-alt="NVSDV"
               />
-
               <!-- Details -->
               <div class="text-center mt-6">
                 <!-- Name -->
-                <h1 class="text-white text-xl font-bold mb-1">NVSDV</h1>
-
-                <!-- Social Icons -->
-                <div
-                  class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
-                >
-                </div>
+                <h1 class="text-white text-xl font-bold mb-1" i18n>NVSDV</h1>
               </div>
             </div>
           </div>
-          <!--end -->
         </div>
 
         <button
           type="button"
           class="max-w-m mb-24 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
           routerLink="/services"
+          i18n
         >
           Join our beatmakers
         </button>
@@ -309,11 +308,12 @@
                 </svg>
                 <h5
                   class="text-m sm900:text-2xl font-bold tracking-tight text-gray-900 dark:text-white my-2"
+                  i18n
                 >
                   Discover beats on YouTube
                 </h5>
               </div>
-              <p class="font-normal text-gray-700 dark:text-gray-400">
+              <p class="font-normal text-gray-700 dark:text-gray-400" i18n>
                 Listen to the latest beats from our beatmakers on our YouTube
                 channel "VCG Production".
               </p>
@@ -346,11 +346,12 @@
                 </svg>
                 <h5
                   class="text-m sm900:text-2xl font-bold tracking-tight text-gray-900 dark:text-white my-2"
+                  i18n
                 >
                   Purchase beats on Beatstars
                 </h5>
               </div>
-              <p class="font-normal text-gray-700 dark:text-gray-400">
+              <p class="font-normal text-gray-700 dark:text-gray-400" i18n>
                 Find the best beats by our beatmakers for your next project.
               </p>
             </a>
