fix: shidozz pp & french typo

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -119,7 +119,7 @@
           <dt class="text-base/7 text-gray-300" i18n="@@seniority">
             Seniority
           </dt>
-          <dd class="text-4xl font-semibold tracking-tight text-white">
+          <dd class="text-4xl font-semibold tracking-tight text-white"  i18n="@@seniority-metric">
             1 year
           </dd>
         </div>
