--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -28,7 +28,7 @@
           role="listitem"
           class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-16 sm:mb-24 xl:max-w-sm lg:w-2/5"
         >
-          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300">
+          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300 pb-4">
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
